[tool.poetry]
name = "lstm-tutorial"
version = "0.1.0"
description = ""
authors = ["cyberprophet <cyberprophet@hanmail.net>"]
readme = "README.md"
packages = [{include = "lstm_tutorial"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
